User auth with flash messages

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -11,8 +11,13 @@
     <body>
         <header>
             <h1 class="title">swartz</h1>
+            <div class="auth">
+                <a href="/signup">signup</a>
+                <a href="/login">login</a>
+            </div>
         </header>
 
+        <div class="flash"></div>
         <div id="page"></div>
     </body>
 </html>
