Save state, working on post pages

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -22,8 +22,8 @@
                 <div class="logout hidden">
                     <div class="identity">
                         logged in as <span class="name"></span>
+                        (<a href="/logout">logout</a>)
                     </div>
-                    <a href="/logout">logout</a>
                 </div>
             </div>
         </header>
