Basic post creation, showing post content

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <h1 class="title">swartz</h1>
+            <h1>swartz</h1>
             <div class="auth">
                 <div class="login">
                     <a href="/signup">signup</a>
