Add user_id to comments. Still local, so no migration needed

--- a/resources/templates/post-snippet.html
+++ b/resources/templates/post-snippet.html
@@ -1,4 +1,3 @@
 <div class="post">
-    <h2 class="title"><a class="url"></a></h2>
-    <div class="content"></div>
+    <a class="title"></a>
 </div>
