--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -5,6 +5,7 @@
 
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="/css/style.css">
 
         <script src="/js/jquery.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
@@ -16,6 +17,7 @@
             <div class="auth">
                 <div class="login">
                     <a href="/signup">signup</a>
+                    &middot;
                     <a href="/login">login</a>
                 </div>
 
