--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,3 +1,14 @@
+header, body, footer {
+  background: #eee;
+  font-color: #111;
+  margin: 12px;
+}
+
 header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 8px 0;
+}
+
+.post-list, .post-list .post a.title {
+  font-size: 18px;
 }
