--- a/resources/templates/show-post.html
+++ b/resources/templates/show-post.html
@@ -14,5 +14,9 @@
             <input type="submit" value="Comment">
         </form>
     </div>
+    <div class="no-comment hidden">
+        You have to <a href="/login">login</a> to comment.
+    </div>
+
     <div class="comments"></div>
 </div>
