Rename comment to note to avoid naming collison

--- a/resources/templates/note-snippet.html
+++ b/resources/templates/note-snippet.html
@@ -1,5 +1,5 @@
-<div class="comment">
+<div class="note">
     <div class="content"></div>
     <div class="user">by </div>
-    <div class="comments"></div>
+    <div class="notes"></div>
 </div>
