--- a/resources/templates/post-list.html
+++ b/resources/templates/post-list.html
@@ -1,2 +1,4 @@
-<ol class="post-list">
-</ol>
+<div class="post-list">
+    <a class="new-post hidden" href="/posts/new">New post</a>
+    <ol class="posts"></ol>
+</div>
