--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -13,7 +13,7 @@
 
     <body>
         <header>
-            <h1>swartz</h1>
+            <h1><a href="/">swartz</a></h1>
             <div class="auth">
                 <div class="login">
                     <a href="/signup">signup</a>
