--- a/resources/templates/show-post.html
+++ b/resources/templates/show-post.html
@@ -2,23 +2,22 @@
     <h2><a class="title"></a></h2>
     <div class="content"></div>
 
-    <div class="comments">
-        <h3>Comments</h3>
-        <div class="new-comment">
-            <form class="comment" method="post">
+    <div class="notes">
+        <h3>Notes</h3>
+        <div class="new-note">
+            <form class="note" method="post">
                 <div class="field">
-                    <textarea name="content" placeholder="Comment on this post">
-                    </textarea>
+                    <textarea name="content" placeholder="Leave a note"></textarea>
                 </div>
 
                 <div class="anti-forgery-field"></div>
 
-                <input type="submit" value="Comment">
+                <input type="submit" value="Note">
             </form>
         </div>
 
-        <div class="no-comment hidden">
-            You have to <a href="/login">login</a> to comment.
+        <div class="no-note hidden">
+            You have to <a href="/login">login</a> to leave a note.
         </div>
     </div>
 </div>
