Fix create controllers, add user_id

--- a/resources/templates/note-snippet.html
+++ b/resources/templates/note-snippet.html
@@ -1,5 +1,6 @@
 <div class="note">
     <div class="content"></div>
     <div class="user">by </div>
+    <a class="reply">reply</a>
     <div class="notes"></div>
 </div>
