--- a/resources/templates/show-post.html
+++ b/resources/templates/show-post.html
@@ -1,5 +1,6 @@
 <div class="post">
     <h2><a class="title"></a></h2>
+    <div class="user"></div>
     <div class="content"></div>
 
     <div class="notes">
