Save state, need to get note page working

--- a/resources/templates/show-post.html
+++ b/resources/templates/show-post.html
@@ -5,17 +5,7 @@
 
     <div class="notes">
         <h3>Notes</h3>
-        <div class="new-note">
-            <form class="note" method="post">
-                <div class="field">
-                    <textarea name="content" placeholder="Leave a note"></textarea>
-                </div>
-
-                <div class="anti-forgery-field"></div>
-
-                <input type="submit" value="Note">
-            </form>
-        </div>
+        <div class="new-note"></div>
 
         <div class="no-note hidden">
             You have to <a href="/login">login</a> to leave a note.
