--- a/resources/templates/show-note.html
+++ b/resources/templates/show-note.html
@@ -7,7 +7,6 @@
     <div class="content"></div>
     <div class="user"></div>
 
-    <div class="new-note">
-    </div>
+    <div class="new-note"></div>
     <div class="notes"></div>
 </div>
