Fix user_id on posts, show user and timestamp

--- a/resources/templates/post-snippet.html
+++ b/resources/templates/post-snippet.html
@@ -1,3 +1,7 @@
 <li class="post">
     <a class="title"></a>
+    <div class="author">
+        <span class="username">submitted by </span>
+        <span class="timestamp small"></span>
+    </div>
 </li>
