--- a/resources/templates/show-note.html
+++ b/resources/templates/show-note.html
@@ -4,8 +4,15 @@
         <div class="user"></div>
     </div>
 
-    <div class="content"></div>
-    <div class="user"></div>
+    <a class="all-notes">view all notes on this post</a>
+
+    <div class="highlight">
+        <div class="author">
+            <span class="username"></span>
+            <span class="timestamp"></span>
+        </div>
+        <div class="content"></div>
+    </div>
 
     <div class="new-note"></div>
     <div class="notes"></div>
