Add note count to post list snippet

--- a/resources/templates/post-snippet.html
+++ b/resources/templates/post-snippet.html
@@ -1,7 +1,9 @@
 <li class="post">
     <a class="title"></a>
-    <div class="author">
+    <div class="author small">
         <span class="username">submitted by </span>
-        <span class="timestamp small"></span>
+        <span class="timestamp"></span>
+        |
+        <span class="notes"></span>
     </div>
 </li>
