--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -1,7 +1,8 @@
 <div class="login">
     <form action="/login" method="post">
         <div class="field">
-            <input type="text" name="username" placeholder="username">
+            <input type="text" name="username" placeholder="username"
+                   autofocus>
         </div>
 
         <div class="field">
