--- a/resources/templates/new-note-form.html
+++ b/resources/templates/new-note-form.html
@@ -1,7 +1,9 @@
 <form class="note" method="post">
     <div class="field">
         <textarea name="content"
-                  placeholder="Leave a note"></textarea>
+                  placeholder="Leave a note"
+                  autofocus></textarea>
+        <input type="hidden" name="note_id">
     </div>
 
     <div class="anti-forgery-field"></div>
