--- a/resources/templates/new-post-form.html
+++ b/resources/templates/new-post-form.html
@@ -1,7 +1,8 @@
 <div class="new-post">
     <form action="/posts" method="post">
         <div class="field">
-            <input type="text" name="title" placeholder="title" required>
+            <input type="text" name="title" placeholder="title" required
+                   autofocus>
         </div>
 
         <div class="field">
