Rename notes back to comments.
I had originally renamed the "comment" table to "note", to avoid collision with the built-in comment function. After working with it, it makes more sense to use "comments" (the word most commonly used for that sort of text reply). Besides, it'll overwrite the comment function already in the namespace, and since I never see myself using that function, it doesn't really matter.

--- a/resources/templates/new-comment-form.html
+++ b/resources/templates/new-comment-form.html
@@ -1,9 +1,9 @@
-<form class="note" method="post">
+<form class="comment" method="post">
     <div class="field">
         <textarea name="content"
-                  placeholder="Leave a note"
+                  placeholder="Leave a comment"
                   autofocus></textarea>
-        <input type="hidden" name="note_id">
+        <input type="hidden" name="comment_id">
     </div>
 
     <div class="anti-forgery-field"></div>
