--- a/resources/templates/show-post.html
+++ b/resources/templates/show-post.html
@@ -3,12 +3,12 @@
     <div class="user"></div>
     <div class="content"></div>
 
-    <div class="notes">
+    <div class="comments">
         <h3>Notes</h3>
-        <div class="new-note"></div>
+        <div class="new-comment"></div>
 
-        <div class="no-note hidden">
-            You have to <a href="/login">login</a> to leave a note.
+        <div class="no-comment hidden">
+            You have to <a href="/login">login</a> to leave a comment.
         </div>
     </div>
 </div>
