--- a/resources/templates/comment-snippet.html
+++ b/resources/templates/comment-snippet.html
@@ -1,6 +1,6 @@
-<div class="note">
+<div class="comment">
     <div class="content"></div>
     <div class="user">by </div>
     <a class="reply">reply</a>
-    <div class="notes"></div>
+    <div class="comments"></div>
 </div>
