--- a/resources/templates/post-snippet.html
+++ b/resources/templates/post-snippet.html
@@ -4,6 +4,6 @@
         <span class="username">submitted by </span>
         <span class="timestamp"></span>
         |
-        <a class="notes"></a>
+        <a class="comments"></a>
     </div>
 </li>
