--- a/resources/templates/show-comment.html
+++ b/resources/templates/show-comment.html
@@ -1,10 +1,10 @@
-<div class="note">
+<div class="comment">
     <div class="post">
         <h2><a class="title"></a></h2>
         <div class="user"></div>
     </div>
 
-    <a class="all-notes">view all notes on this post</a>
+    <a class="all-comments">view all comments on this post</a>
 
     <div class="highlight">
         <div class="author">
@@ -14,6 +14,6 @@
         <div class="content"></div>
     </div>
 
-    <div class="new-note"></div>
-    <div class="notes"></div>
+    <div class="new-comment"></div>
+    <div class="comments"></div>
 </div>
