Replace korma queries with yesql equivalents

--- a/resources/templates/new-comment-form.html
+++ b/resources/templates/new-comment-form.html
@@ -3,7 +3,7 @@
         <textarea name="content"
                   placeholder="Leave a comment"
                   autofocus></textarea>
-        <input type="hidden" name="comment_id">
+        <input type="hidden" name="parent_id">
     </div>
 
     <div class="anti-forgery-field"></div>
