Indent comments by depth

--- a/resources/templates/new-comment-form.html
+++ b/resources/templates/new-comment-form.html
@@ -8,5 +8,5 @@
 
     <div class="anti-forgery-field"></div>
 
-    <input type="submit" value="Note">
+    <input type="submit" value="Add comment">
 </form>
