--- a/resources/templates/show-post.html
+++ b/resources/templates/show-post.html
@@ -4,7 +4,7 @@
     <div class="content"></div>
 
     <div class="comments">
-        <h3>Notes</h3>
+        <h3>Comments</h3>
         <div class="new-comment"></div>
 
         <div class="no-comment hidden">
