Show message on failed login, save username

--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -1,5 +1,6 @@
 <div class="login">
     <form action="/login" method="post">
+        <div class="message"></div>
         <div class="field">
             <input type="text" name="username" placeholder="username"
                    autofocus>
