--- a/resources/templates/signup.html
+++ b/resources/templates/signup.html
@@ -2,11 +2,12 @@
     <form action="/signup" method="post">
         <div class="field">
             <input type="text" name="username" placeholder="username"
-                   autofocus>
+                   autofocus required>
         </div>
 
         <div class="field">
-            <input type="password" name="password" placeholder="password">
+            <input type="password" name="password" placeholder="password"
+                   required>
         </div>
 
         <div class="anti-forgery-field"></div>
